--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
     border: 1.5px solid #717377;
     padding: 20px;
     border-radius: 16px;
-    background: transparent;
+    background: #00000057;
    /* background-image: url("https://w0.peakpx.com/wallpaper/530/748/HD-wallpaper-aurora-borealis-near-sea.jpg");*/
 
 }
